<resources>
    <string name="app_name">AndroidTaskManagerNoTabs</string>
    <string name="view_all_tasks">View All Tasks</string>
    <string name="view_all_complete_tasks">View all complete tasks</string>
    <string name="view_all_incomplete_tasks">View all Incomplete Tasks</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="getinput">getinput</string>
    <string name="edit_task_button">Edit task</string>
    <string name="mark_task_complete_button">mark task complete</string>
    <string name="save_changes_button">save changes</string>
    <string name="cancel_changes_button">Cancel</string>
    <string name="backButton">Back</string>
    <string name="title_view">Title: %1$s</string>
    <string name="details_view">Details: %1$s</string>
    <string name="due_date_view">Due Date: %1$s</string>
    <string name="created_date_view">Task created on: %1$s</string>
    <string name="priority_view">High priority: %1$s</string>
    <string name="complete_date_view">Date Completed: %1$s</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="due_date">Due date:</string>
    <string name="priority_y_n">Priority? Y/N</string>
    <string name="delete_alert_title">Are you sure you want to delete task: "%1$s"?</string>
    <string name="delete_alert_message">If you delete this task, it will be permanently removed.</string>
    <string name="alert_delete_button">Delete</string>
    <string name="task_view_instructions">Tap on a task to view/edit its details. Tap and hold on a task to delete it. The red tasks are of high priority.</string>
    <string name="welcome_message">Welcome to the Task Manager!</string>
    <string name="add_task">Add Task</string>
    <string name="cancel">Cancel</string>
    <string name="no_tasks_to_display">No Tasks to display</string>


</resources>
