<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/title_input_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="Title"
        android:inputType="text"
        android:padding="8dp"
        android:paddingTop="12dp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_input_edittext"
        android:hint="Details"
        app:layout_constraintTop_toBottomOf="@+id/title_input_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/duedate_day_input"
        android:padding="8dp"
        android:textAlignment="center"
        android:paddingTop="12dp"
        />

    <EditText
        android:inputType="number"
        android:layout_width="75sp"
        android:layout_height="wrap_content"
        android:id="@+id/duedate_day_input"
        android:hint="@string/dd"
        app:layout_constraintTop_toBottomOf="@+id/detail_input_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/priority_input_edittext"
        android:padding="8dp"
        android:textAlignment="center"
        android:paddingTop="12dp"
        android:maxLength="2"/>

    <EditText
        android:layout_width="75sp"
        android:layout_height="wrap_content"
        android:id="@+id/duedate_month_input"
        app:layout_constraintRight_toLeftOf="@id/duedate_day_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_input_edittext"
        app:layout_constraintBottom_toTopOf="@id/priority_input_edittext"
        android:padding="8dp"
        android:textAlignment="center"
        android:paddingTop="12dp"
        android:inputType="number"
        android:hint="@string/mm"
        android:maxLength="2"/>

    <EditText
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:id="@+id/duedate_year_input"
        app:layout_constraintLeft_toRightOf="@id/duedate_day_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_input_edittext"
        app:layout_constraintBottom_toTopOf="@id/priority_input_edittext"
        android:padding="8dp"
        android:textAlignment="center"
        android:paddingTop="12dp"
        android:inputType="number"
        android:hint="@string/yyyy"
        android:maxLength="4"/>


    <TextView
        android:id="@+id/duedate_add_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/due_date"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/duedate_day_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/priority_input_edittext"
        android:hint="@string/priority_y_n"
        app:layout_constraintTop_toBottomOf="@+id/duedate_day_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/add_task_button_fragment"
        android:padding="8dp"
        android:textAlignment="center"
        android:paddingTop="12dp"
        android:maxLength="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/back_add_task_button_fragment"
        android:text="@string/cancel"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/back_add_task_button_fragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/add_task_button_fragment"
        android:text="@string/add_task"
        />

</android.support.constraint.ConstraintLayout>